[gd_scene load_steps=5 format=3 uid="uid://dq6q4df2e2iqq"]

[ext_resource type="Script" path="res://tests/test_ghost.gd" id="1_i1eou"]
[ext_resource type="AudioStream" uid="uid://cl3qy7um688n5" path="res://audio/sound_fx/metalClick.ogg" id="2_mfjsg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_37j8p"]
albedo_color = Color(1, 0.14902, 0.14902, 1)
roughness = 0.49

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6ba1w"]
material = SubResource("StandardMaterial3D_37j8p")

[node name="TestGhost" type="Node3D"]
script = ExtResource("1_i1eou")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_6ba1w")

[node name="TestSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
stream = ExtResource("2_mfjsg")
doppler_tracking = 1

[node name="TestSoundTimer" type="Timer" parent="."]

[connection signal="timeout" from="TestSoundTimer" to="." method="_on_test_sound_timer_timeout"]
